--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					</script>
 	<main>
 			<nav class="navbar2">	  
-				<a href="index.html" ><img src="img/logo1.png" style="position: fixed; width: 100px; height: 35px; top: 15px; left: 0%; z-index: 4;"></a>
+				<a href="index.html" ><img src="img/logo_neu.png" style="position: fixed; width: 100px; height: 35px; top: 15px; left: 0%; z-index: 4;"></a>
 			<div class="hamburger" onclick="openNav()">
 				<div class="line"></div>
 				<div class="line"></div>
@@ -204,7 +204,7 @@
 								style="margin: auto; margin-top: 20px; width: 70%;">
 							<div class="card-body">
 								<h5 class="card-title">Classic Shisha</h5>
-								<p style="color: var(--grundfarbe);"><h3>Das Beste vom Besten.</h3></p>
+								<p style="color: var(--grundfarbe);"><h3>Die allseits bekannten Klassiker des Shishatabaks.</h3></p>
 								<div class="row" style="min-width: 100%;">
 										<div class="col-sm-3" >
 												<div class="form-group">
@@ -242,13 +242,13 @@
 										</div>
 									<div class="col-sm-6" style="max-width: 30%;">
 											<h5><span class="badge badge-info" id="classicanzahlpreis" style="color: (--third);
-												background: var(--grundfarbe);">8.00 €</span></h5>
+												background: var(--grundfarbe);">9,00 €</span></h5>
 									</div>
 								</div>
 									<div class="row">
 										<div class="col-sm-12" style="min-width: 100%;">
 											<button href="#0" id="classicshishainput" disabled value="" style="min-width: 100%; background: var(--grundfarbe);" class="cd-add-to-cart js-cd-add-to-cart"
-												data-price="8.00" data-art="Classic-Shisha" data-anzahl="1" data-name="Classic-Shisha">In den Warenkorb</button>
+												data-price="9.00" data-art="Classic-Shisha" data-anzahl="1" data-name="Classic-Shisha">In den Warenkorb</button>
 										</div>
 									</div>
 									<!--
@@ -267,7 +267,7 @@
 						style="margin: auto; margin-top: 20px; width: 70%;">
 					<div class="card-body">
 						<h5 class="card-title">Premium Shisha</h5>
-						<p style="color: var(--grundfarbe);"><h3> Beste vom Besten.</h3></p>
+						<p style="color: var(--grundfarbe);"><h3>Sortiment Premiumtabak für einen unvergesslichen Geschmack.</h3></p>
 						<div class="row">
 							<div class="col-sm-3" >
 									<div class="form-group">
@@ -307,13 +307,13 @@
 							</div>
 							<div class="col-sm-3" style="max-width: 30%;">
 									<h5><span class="badge badge-info" id="premiumanzahlpreis" style="color: var(--hellgrau);
-										background: var(--grundfarbe);">10.00 €</span></h5>
+										background: var(--grundfarbe);">11,00 €</span></h5>
 								</div>
 						</div>
 						<div class="row" style="min-width: 100%;">
 							<div class="col-sm-12" style="min-width: 100%;">
 								<button href="#0" id="premiumshishainput" disabled style="min-width: 100%;  background: var(--grundfarbe);" value="" class="cd-add-to-cart js-cd-add-to-cart"
-									data-price="10.00" data-art="Premium-Shisha" data-anzahl="1" data-name="Premium-Shisha">In den Warenkorb</button>
+									data-price="11.00" data-art="Premium-Shisha" data-anzahl="1" data-name="Premium-Shisha">In den Warenkorb</button>
 							</div>
 						</div>
 						<!--
@@ -332,8 +332,8 @@
 					<img src="img/amy.svg" class="card-img-top" alt="..."
 						style="margin: auto; margin-top: 20px; width: 70%; color: var(--hellgrau);">
 					<div class="card-body">
-						<h5 class="card-title" style="color: var(--secondary);">Exclusiv-Shisha</h5>
-						<p ><h3 style="color: var(--secondary);">Das Beste vom Besten.</h3></p>
+						<h5 class="card-title" style="color: var(--secondary);">Exclusiv Shisha</h5>
+						<p ><h3 style="color: var(--secondary);">Nur das Beste vom Besten. Exklusiver Shishatabak.</h3></p>
 						<div class="row" style="min-width: 100%;">
 								<div class="col-sm-3" >
 										<div class="form-group">
@@ -370,7 +370,7 @@
 									</div>
 									<div class="col-sm-3" style="max-width: 30%;">
 											<h5><span class="badge badge-info" style="color: var(--grundfarbe);;
-												background: #fff;" id="exclusivanzahlpreis">12.00 €</span></h5>
+												background: #fff;" id="exclusivanzahlpreis">13,00 €</span></h5>
 									</div>
 							</div>
 							
@@ -378,7 +378,7 @@
 						<div class="row">
 							<div class="col-sm-12" style="min-width: 100%;">
 								<button href="#0" id="exclusivshishainput" value="" disabled style="min-width: 100%; background: var(--secondary); color: var(--grundfarbe);" class="cd-add-to-cart js-cd-add-to-cart"
-									data-price="12.00" data-art="Exclusiv-Shisha" data-anzahl="1" data-name="Exclusiv-Shisha">In den Warenkorb</button>
+									data-price="13.00" data-art="Exclusiv-Shisha" data-anzahl="1" data-name="Exclusiv-Shisha">In den Warenkorb</button>
 							</div>
 						</div>
 						<!--
@@ -440,7 +440,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 										<option value="1.50" data-img="img/sprite.svg" data-name="Sprite(0,33l)">Sprite 0.33l</option>
 										<option value="1.50" data-img="img/gerolsteiner.svg" data-name="Gerolsteiner-Naturell(0,33l)">Gerolsteiner Naturell 0.33l</option>
 										<option value="1.50" data-img="img/gerolsteinersprudel.svg" data-name="Gerolsteiner-Sprudel(0,33l)">Gerolsteiner Sprudel 0.33l</option>
-										<option value="1.50" data-img="img/durstlöscher.svg" data-name="Durstloescher(0,33l)">Durstlöscher 0.5l</option>
+										<option value="1.00" data-img="img/durstlöscher.svg" data-name="Durstloescher(0,33l)">Durstlöscher 0.5l</option>
 										<option value="2.00" data-img="img/redbull.svg" data-name="RedBull(0,25l)">RedBull 0.25l</option>
 										<option value="2.00" data-img="img/redbullzero.svg" data-name="RedBull-sugarfree(0,25l)">RedBull sugarfree 0.25l</option>
 										<option value="2.00" data-img="img/schwarzedose.svg" data-name="SchwarzeDose(0,25l)">Schwarze Dose 0.25l</option>
@@ -500,11 +500,11 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 									<select class="selectpicker form-control" style="height: auto; border: 2px solid var(--grundfarbe); font-size: 14px;"
 										onchange="alkoholwahl()" id="alkoholoutput" data-width="auto">
 										<option value="" id="platzhalter" disabled selected>Flasche wählen</option>
-										<option value="15.00" data-img="img/threesixty.svg" data-name="ThreeSixty(0,7l)">Three Sixty Vodka 0,7 l</option>
-										<option value="15.00" data-img="img/absolutvodka.svg" data-name="Absolout-Vodka(0,7l)">Absolut Vodka 0,7l</option>
-										<option value="15.00" data-img="img/bacardi.svg" data-name="Bacardi(0,7l)">Bacardi 0,7l</option>
-										<option value="30.00" data-img="img/jimbeam.svg" data-name="JimBeam(0,7l)">Jim Beam 0,7 l</option>
-										<option value="35.00" data-img="img/jackdaniels.svg" data-name="JackDaniels(0,7l)">Jack Daniels 0,7 l</option>
+										<option value="18.50" data-img="img/threesixty.svg" data-name="ThreeSixty(0,7l)">Three Sixty Vodka 0,7 l</option>
+										<option value="18.50" data-img="img/absolutvodka.svg" data-name="Absolout-Vodka(0,7l)">Absolut Vodka 0,7l</option>
+										<option value="18.50" data-img="img/bacardi.svg" data-name="Bacardi(0,7l)">Bacardi 0,7l</option>
+										<option value="18.50" data-img="img/jimbeam.svg" data-name="JimBeam(0,7l)">Jim Beam 0,7 l</option>
+										<option value="24.50" data-img="img/jackdaniels.svg" data-name="JackDaniels(0,7l)">Jack Daniels 0,7 l</option>
 									</select>
 								</div>
 							</div>
@@ -561,11 +561,11 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 									<select class="selectpicker form-control" style="height: auto;border: 2px solid var(--grundfarbe);font-size: 14px;"
 										onchange="snackswahl()" id="snacksoutput" data-width="auto">
 										<option id="platzhalter" disabled selected>Snack wählen </option>
-										<option value="2.00" data-img="img/product-preview.png" data-name="Erdnuesse(300g)">Erdnüsse 300g</option>
-										<option value="1.00" data-img="img/product-preview.png" data-name="NicNac's(200g)">Nic Nac's 200g</option>
+										<option value="2.00" data-img="img/product-preview.png" data-name="Erdnuesse(300g)">Erdnüsse 150g</option>
+										<option value="3.00" data-img="img/product-preview.png" data-name="NicNac's(200g)">Nic Nac's 125g</option>
 										<option value="3.00" data-img="img/product-preview.png" data-name="Salzbrezel(200g)">Salzbrezel 200g</option>
-										<option value="3.00" data-img="img/saltletts.svg" data-name="Salzstangen(175g)">Salzstangen 175g</option>
-										<option value="1.50" data-img="img/chipsfrisch.svg" data-name="Chipsfrisch(175g)">Chipsfrisch Ungarisch 175g</option>
+										<option value="1.50" data-img="img/saltletts.svg" data-name="Salzstangen(175g)">Salzstangen 250g</option>
+										<option value="1.00" data-img="img/chipsfrisch.svg" data-name="Chipsfrisch(175g)">Chipsfrisch Ungarisch 50g</option>
 									</select>
 								</div>
 							</div>
