--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 					<img src="img/flasche.svg" id="softdrinksimg" class="card-img-top" alt="..." style="margin: auto; margin-top: 20px; width: 70%;">
 					<div class="card-body">
 						<h5 class="card-title">Softgetränke</h5>
-						<p style="color: var(--grundfarbe);" ><h3>Das Beste vom Besten.</h3></p>
+						<p style="color: var(--grundfarbe);" ><h3>"Wir treffen uns auf Moloko & Shisha..."</h3></p>
 						<div class="row" style="min-width: 100%;">
 								<div class="col-sm-3" >
 										<div class="form-group">
@@ -478,7 +478,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 					<img src="img/alkohol.svg" id="alkoholimg" class="card-img-top" alt="..." style="margin: auto; margin-top: 20px; width: 70%;">
 					<div class="card-body">
 						<h5 class="card-title">Alkoholische Getränke</h5>
-						<p style="color: var(--grundfarbe);"><h3>Flaschen werden mit 6 Dosen geliefert.</h3></p>
+						<p style="color: var(--grundfarbe);"><h3>Flaschen werden nicht mit Mischgetränken geliefert.</h3></p>
 						<div class="row" style="min-width: 100%;">
 								<div class="col-sm-3" >
 										<div class="form-group">
@@ -539,7 +539,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 					<img src="img/snacks.svg" id="snacksimg" class="card-img-top" alt="..." style="margin: auto; margin-top: 20px; width: 70%;">
 					<div class="card-body">
 						<h5 class="card-title">Snacks</h5>
-						<p style="color: var(--grundfarbe);"><h3>Das Beste vom Besten.</h3></p>
+						<p style="color: var(--grundfarbe);"><h3>Für etwas Kleines zwischendurch, könnt Ihr euch leckere Snacks ins Haus bringen lassen.</h3></p>
 						<div class="row" style="min-width: 100%;">
 								<div class="col-sm-3" >
 										<div class="form-group">
@@ -596,13 +596,14 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 		</div>
 	</div>
 </div>
+<!--
 <section id="section06" class="demo" style="background: var(--third);">
 	<a href="#menu"><span></span></a>
 </section>
 <hr class="style-two">
-
+-->
 <!-- /////// MENU  /////////// -->
-
+<!--
 <div id="menu" class="container-fluid " style="background: linear-gradient(
 	rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/shisha2.svg) no-repeat center center;">
 	<br>
@@ -624,6 +625,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 	</div>
   </div>
 </div>
+-->
 <section id="section06" class="demo" style="background: var(--third);">
 		<a href="#social-media"><span></span></a>
 </section>
@@ -695,7 +697,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 	<div class="col-sm-3"></div>
 	<div class="col-sm-3"><p><a class="btn_s" style="box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);" href="tel:+49 173 4937652"><i class="material-icons">phone</i></a><h3>+49 173 4937652</h3></p></div>
 	<div class="col-sm-3">
-		<p><a class="btn_s" style="box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);" href="mailto:kontakt@shisha2you.de?subject=Kontaktanfrage"><i class="material-icons">email</i> </a><h3>kontakt@shisha2you.de</h3></p>
+		<p><a class="btn_s" style="box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);" href="mailto:info@shisha2you.de?subject=Kontaktanfrage"><i class="material-icons">email</i> </a><h3>info@shisha2you.de</h3></p>
 	</div>
 		<div class="col-sm-3"></div>
 	</div>
