--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 		<!-- <a class="btn_telefon slideanim2" href="tel:+51112345667" ><i class="material-icons">phone</i></a> -->
 		<!-- <a class="btn_whatsapp slideanim2" href="https://api.whatsapp.com/send?phone=491762295702" ><i class="fab fa-whatsapp"></i></a> -->
-		<a class="btn_lieferung slideanim2" href="#lieferzeiten" style="min-width: 30%; border-radius: 2rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">announcement</i></br>WEGEN des Corona-Viruses </br>liefern wir kontaktlos!</a>
+		<a class="btn_lieferung slideanim2" href="#lieferzeiten" style="min-width: 30%; border-radius: 2rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">announcement</i></br>WEGEN des Corona-Viruses </br>liefern wir kontaktlos! </br>Pro Shisha-Bestellung erhält ihr einen Einweg-Schlauch.</a>
 		
 
 		<!--
@@ -242,12 +242,12 @@
 										</div>
 									<div class="col-sm-6" style="max-width: 30%;">
 											<h5><span class="badge badge-info" id="classicanzahlpreis" style="color: (--third);
-												background: var(--grundfarbe);">9,00 €</span></h5>
+												background: var(--grundfarbe);">10.00 €</span></h5>
 									</div>
 								</div>
 									<div class="row">
 										<div class="col-sm-12" style="min-width: 100%;">
-											<button href="#0" id="classicshishainput" disabled value="" style="min-width: 100%; background: var(--grundfarbe);" class="cd-add-to-cart js-cd-add-to-cart"
+											<button href="#0" id="classicshishainput" disabled value="" style="min-width: 100%; background: var(--hellgrau);" class="cd-add-to-cart js-cd-add-to-cart"
 												data-price="9.00" data-art="Classic-Shisha" data-anzahl="1" data-name="Classic-Shisha">In den Warenkorb</button>
 										</div>
 									</div>
@@ -267,7 +267,7 @@
 						style="margin: auto; margin-top: 20px; width: 70%;">
 					<div class="card-body">
 						<h5 class="card-title">Premium Shisha</h5>
-						<p style="color: var(--grundfarbe);"><h3>Sortiment Premiumtabak für einen unvergesslichen Geschmack.</h3></p>
+						<p style="color: var(--grundfarbe);"><h3>Premiumtabak für einen unvergesslichen Geschmack.</h3></p>
 						<div class="row">
 							<div class="col-sm-3" >
 									<div class="form-group">
@@ -307,7 +307,7 @@
 							</div>
 							<div class="col-sm-3" style="max-width: 30%;">
 									<h5><span class="badge badge-info" id="premiumanzahlpreis" style="color: var(--hellgrau);
-										background: var(--grundfarbe);">11,00 €</span></h5>
+										background: var(--grundfarbe);">13.00 €</span></h5>
 								</div>
 						</div>
 						<div class="row" style="min-width: 100%;">
@@ -370,7 +370,7 @@
 									</div>
 									<div class="col-sm-3" style="max-width: 30%;">
 											<h5><span class="badge badge-info" style="color: var(--grundfarbe);;
-												background: #fff;" id="exclusivanzahlpreis">13,00 €</span></h5>
+												background: #fff;" id="exclusivanzahlpreis">15.00 €</span></h5>
 									</div>
 							</div>
 							
@@ -394,6 +394,11 @@
 			</div>
 		</div>
 	</div>
+	<div class="col-sm-12" style="min-width: 100%;padding-left: 0px; padding-right: 0px;">
+		<button href="#0"  disabled style="min-width: 100%; margin-top: 50px; margin-bottom: 0px; background: var(--hellgrau); color: var(--secondary);" class="cd-add-to-cart js-cd-add-to-cart">
+			Was alles zur Shisha geliefert wird: Shisha-Set + 1x Anzünder + 9x Kohle Stücke + 20g Shishatabak (1x Kopf)
+		</button>
+	</div>
 </div>
 <section id="section06" class="demo" style="background: var(--third);">
 	<a href="#auswahl_getränke"><span></span></a>
@@ -412,7 +417,6 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 					<img src="img/flasche.svg" id="softdrinksimg" class="card-img-top" alt="..." style="margin: auto; margin-top: 20px; width: 70%;">
 					<div class="card-body">
 						<h5 class="card-title">Softgetränke</h5>
-						<p style="color: var(--grundfarbe);" ><h3>"Wir treffen uns auf Moloko & Shisha..."</h3></p>
 						<div class="row" style="min-width: 100%;">
 								<div class="col-sm-3" >
 										<div class="form-group">
@@ -441,10 +445,10 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 										<option value="1.50" data-img="img/gerolsteiner.svg" data-name="Gerolsteiner-Naturell(0,33l)">Gerolsteiner Naturell 0.33l</option>
 										<option value="1.50" data-img="img/gerolsteinersprudel.svg" data-name="Gerolsteiner-Sprudel(0,33l)">Gerolsteiner Sprudel 0.33l</option>
 										<option value="1.00" data-img="img/durstlöscher.svg" data-name="Durstloescher(0,33l)">Durstlöscher 0.5l</option>
-										<option value="2.00" data-img="img/redbull.svg" data-name="RedBull(0,25l)">RedBull 0.25l</option>
-										<option value="2.00" data-img="img/redbullzero.svg" data-name="RedBull-sugarfree(0,25l)">RedBull sugarfree 0.25l</option>
-										<option value="2.00" data-img="img/schwarzedose.svg" data-name="SchwarzeDose(0,25l)">Schwarze Dose 0.25l</option>
-										<option value="2.00" data-img="img/moloko.svg" data-name="Moloko(0,25l)">Moloko 0.25l</option>
+										<option value="2.50" data-img="img/redbull.svg" data-name="RedBull(0,25l)">RedBull 0.25l</option>
+										<option value="2.50" data-img="img/redbullzero.svg" data-name="RedBull-sugarfree(0,25l)">RedBull sugarfree 0.25l</option>
+										<option value="2.50" data-img="img/schwarzedose.svg" data-name="SchwarzeDose(0,25l)">Schwarze Dose 0.25l</option>
+										<option value="2.50" data-img="img/moloko.svg" data-name="Moloko(0,25l)">Moloko 0.25l</option>
 									</select>
 								</div>
 							</div>
@@ -478,7 +482,6 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 					<img src="img/alkohol.svg" id="alkoholimg" class="card-img-top" alt="..." style="margin: auto; margin-top: 20px; width: 70%;">
 					<div class="card-body">
 						<h5 class="card-title">Alkoholische Getränke</h5>
-						<p style="color: var(--grundfarbe);"><h3>Flaschen werden nicht mit Mischgetränken geliefert.</h3></p>
 						<div class="row" style="min-width: 100%;">
 								<div class="col-sm-3" >
 										<div class="form-group">
@@ -539,7 +542,6 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 					<img src="img/snacks.svg" id="snacksimg" class="card-img-top" alt="..." style="margin: auto; margin-top: 20px; width: 70%;">
 					<div class="card-body">
 						<h5 class="card-title">Snacks</h5>
-						<p style="color: var(--grundfarbe);"><h3>Für etwas Kleines zwischendurch, könnt Ihr euch leckere Snacks ins Haus bringen lassen.</h3></p>
 						<div class="row" style="min-width: 100%;">
 								<div class="col-sm-3" >
 										<div class="form-group">
@@ -642,16 +644,18 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 	<div class="middle">
 		<div class="row">
 			<div class="col-sm-3"></div>
+			<!--
 			<div class="col-sm-3">
 				<p><a class="btn_s" style="box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"
 						href="#">
 						<i class="fab fa-facebook-f"></i>
 					</a></p>
 			</div>
-			<div class="col-sm-3">
+			-->
+			<div class="col-sm-6">
 				<p>
 					<a class="btn_s" style="box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"
-						href="#">
+						href="https://www.instagram.com/shisha2you_de/?hl=de">
 						<i class="fab fa-instagram"></i>
 					</a></p>
 			</div>
@@ -726,7 +730,8 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 
 <!--///////// FOOTER ///////////-->
 <hr class="style-two">
-<footer class="container-fluid text-center" style="color: var(--grundfarbe); padding-bottom: 20px;">
+<footer class="container-fluid text-center" style="background: linear-gradient(
+	rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center; color: var(--grundfarbe); padding-bottom: 20px;">
   <p><a style="font-size: 12px;" href="#0" class="links" id="modal-trigger" data-type="cd-modal-trigger">Datenschutzerklärung</a></p>
   <p><a style="font-size: 12px;" href="#myModal" class="links" id="modal-trigger2" data-toggle="modal">Impressum</a></p>
   <hr class="style-two">
