--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     src="https://www.paypal.com/sdk/js?client-id=AWcDGS43FUOITL8aAbnPevapI38ZozP5qSLW3UaUzV4DaU7DaG57DDXC_LX5hRqOQ5MTBJ1evO98tWNg"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
   </script>
   <script>
+	  /*
     paypal.Buttons({
 		createOrder: function(data, actions) {
 		// This function sets up the details of the transaction, including the amount and line item details.
 		return actions.order.create({
 			purchase_units: [{
 			amount: {
-				currency_code: EUR,
 				value: '13.00'
 				}
 			}]
@@ -41,6 +41,7 @@
 		});
     }
   	}).render('#paypal-button-container');
+	  */
     // This function displays Smart Payment Buttons on your web page.
   </script>
 
@@ -1251,6 +1252,58 @@ $(document).ready(function(){
 				}
 			
 		}
+
+
+
+
+		function getPaypal() {
+			console.log("Funktion drin");
+			var items = document.getElementsByClassName("cd-cart__product");
+			var menge = document.getElementsByClassName("reset");
+			var warenausgang = document.getElementById("warenkorb-whatsapp");
+			var agbs = document.getElementById("agb");
+			var alter = document.getElementById("alter");
+			var x = 'https://wa.me/491734937652?text=Hallo%20Team%20Shisha2you,%20ich%20moechte%20gerne%20Folgendes%20bestellen:'; //"%201x%20Classic-Shisha%20Social-Smoke%20LemonFresh%20an%20folgende%20Adresse%20liefern:%20" + "https://maps.google.com/?q=" + position.coords.latitude + "," +  position.coords.longitude;
+			var gesamtpreis = 0;
+			var shisha = "";
+			if (alter.checked){
+				if (agbs.checked){ 
+					paypal.Buttons({
+						style: {
+							layout:  'vertical',
+							color:   'black',
+							shape:   'rect',
+							label:   'paypal'
+						},
+						createOrder: function(data, actions) {
+						// This function sets up the details of the transaction, including the amount and line item details.
+						return actions.order.create({
+							purchase_units: [{
+							amount: {
+								value: '13.00'
+								}
+							}]
+						});
+						},
+						onApprove: function(data, actions) {
+						// This function captures the funds from the transaction.
+						return actions.order.capture().then(function(details) {
+							// This function shows a transaction success message to your buyer.
+							alert('Shisha-Bestellung erfolgreich von ' + details.payer.name.given_name + ' bezahlt.');
+						});
+					}
+					}).render('#paypal-button-container');
+				}else {
+						
+					alert("Sie müssen die AGBs zustimmen, um die Bestellung aufzugeben.");
+					return false
+				}
+			}else {
+					
+					alert("Sie müssen erst Bestätigen, dass Sie 18 Jahre oder älter sind.");
+					return false
+			}
+			
 		
 	
 </script>
