--- a/index.html
+++ b/index.html
@@ -18,39 +18,75 @@
 	<script src="js/util.js"></script> <!-- util functions included in the CodyHouse framework -->
 	<script src="js/jquery-2.1.1.js"></script>
 	<script
-    src="https://www.paypal.com/sdk/js?client-id=AWcDGS43FUOITL8aAbnPevapI38ZozP5qSLW3UaUzV4DaU7DaG57DDXC_LX5hRqOQ5MTBJ1evO98tWNg"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
-  </script>
-  <script>
-	  
-    paypal.Buttons(
-		{
-		style: {
-							layout:  'vertical',
-							color:   'black',
-							shape:   'rect',
-							label:   'paypal'
-						},
-		createOrder: function(data, actions) {
-		// This function sets up the details of the transaction, including the amount and line item details.
-		return actions.order.create({
-			purchase_units: [{
-			amount: {
-				value: '13.00'
-				}
-			}]
+    	src="https://www.paypal.com/sdk/js?client-id=AWcDGS43FUOITL8aAbnPevapI38ZozP5qSLW3UaUzV4DaU7DaG57DDXC_LX5hRqOQ5MTBJ1evO98tWNg=sb&components=buttons,funding-eligibility"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
+  	</script>
+  	<script>
+	  // Loop over each funding source / payment method
+		paypal.getFundingSources().forEach(function(fundingSource) {
+
+		// Initialize the buttons
+		var button = paypal.Buttons({
+			fundingSource: fundingSource
 		});
-		},
-		onApprove: function(data, actions) {
-		// This function captures the funds from the transaction.
-		return actions.order.capture().then(function(details) {
-			// This function shows a transaction success message to your buyer.
-			alert('Shisha-Bestellung erfolgreich von ' + details.payer.name.given_name + ' bezahlt.');
+
+		// Check if the button is eligible
+		if (button.isEligible()) {
+
+			// Render the standalone button for that funding source
+			button.render('#paypal-button-container');
+		}
 		});
-    }
-  	}).render('#paypal-button-container');
-	  
-    // This function displays Smart Payment Buttons on your web page.
-  </script>
+		var FUNDING_SOURCES = [
+		paypal.FUNDING.PAYPAL,
+		paypal.FUNDING.VENMO,
+		paypal.FUNDING.CREDIT,
+		paypal.FUNDING.CARD
+		];
+
+		// Loop over each funding source / payment method
+		FUNDING_SOURCES.forEach(function(fundingSource) {
+
+			// Initialize the buttons
+			var button = paypal.Buttons({
+				fundingSource: fundingSource
+			});
+
+			// Check if the button is eligible
+			if (button.isEligible()) {
+
+				// Render the standalone button for that funding source
+				button.render('#paypal-button-container');
+			}
+		});
+		paypal.Buttons(
+			{
+			style: {
+								layout:  'vertical',
+								color:   'black',
+								shape:   'rect',
+								label:   'paypal'
+							},
+			createOrder: function(data, actions) {
+			// This function sets up the details of the transaction, including the amount and line item details.
+			return actions.order.create({
+				purchase_units: [{
+				amount: {
+					value: '13.00'
+					}
+				}]
+			});
+			},
+			onApprove: function(data, actions) {
+			// This function captures the funds from the transaction.
+			return actions.order.capture().then(function(details) {
+				// This function shows a transaction success message to your buyer.
+				alert('Shisha-Bestellung erfolgreich von ' + details.payer.name.given_name + ' bezahlt.');
+			});
+		}
+		}).render('#paypal-button-container');
+		
+		// This function displays Smart Payment Buttons on your web page.
+  	</script>
 
   	
 	<title>Shisha2you</title>
