--- a/index.html
+++ b/index.html
@@ -18,52 +18,15 @@
 	<script src="js/util.js"></script> <!-- util functions included in the CodyHouse framework -->
 	<script src="js/jquery-2.1.1.js"></script>
 	<script
-    	src="https://www.paypal.com/sdk/js?client-id=AWcDGS43FUOITL8aAbnPevapI38ZozP5qSLW3UaUzV4DaU7DaG57DDXC_LX5hRqOQ5MTBJ1evO98tWNg=sb&components=buttons,funding-eligibility"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
+    	src="https://www.paypal.com/sdk/js?client-id=AWcDGS43FUOITL8aAbnPevapI38ZozP5qSLW3UaUzV4DaU7DaG57DDXC_LX5hRqOQ5MTBJ1evO98tWNg"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
   	</script>
   	<script>
-	  // Loop over each funding source / payment method
-		paypal.getFundingSources().forEach(function(fundingSource) {
-
-		// Initialize the buttons
-		var button = paypal.Buttons({
-			fundingSource: fundingSource
-		});
-
-		// Check if the button is eligible
-		if (button.isEligible()) {
-
-			// Render the standalone button for that funding source
-			button.render('#paypal-button-container');
-		}
-		});
-		var FUNDING_SOURCES = [
-		paypal.FUNDING.PAYPAL,
-		paypal.FUNDING.VENMO,
-		paypal.FUNDING.CREDIT,
-		paypal.FUNDING.CARD
-		];
-
-		// Loop over each funding source / payment method
-		FUNDING_SOURCES.forEach(function(fundingSource) {
-
-			// Initialize the buttons
-			var button = paypal.Buttons({
-				fundingSource: fundingSource
-			});
-
-			// Check if the button is eligible
-			if (button.isEligible()) {
-
-				// Render the standalone button for that funding source
-				button.render('#paypal-button-container');
-			}
-		});
 		paypal.Buttons(
 			{
 			style: {
 								layout:  'vertical',
 								color:   'black',
-								shape:   'rect',
+								shape:   'pill',
 								label:   'paypal'
 							},
 			createOrder: function(data, actions) {
@@ -303,7 +266,7 @@
 									</div>
 									
 									<div class="row">
-										<div class="col-sm-12" style="min-width: 100%;">
+										<div class="col-sm-12" style="min-width: 100%;margin-top: 50px;">
 											<div style="z-index: 2;" id="paypal-button-container"></div>
 										</div>
 									</div>
