--- a/index.html
+++ b/index.html
@@ -116,10 +116,9 @@
 
 		<!-- <a class="btn_telefon slideanim2" href="tel:+51112345667" ><i class="material-icons">phone</i></a> -->
 		<!-- <a class="btn_whatsapp slideanim2" href="https://api.whatsapp.com/send?phone=491762295702" ><i class="fab fa-whatsapp"></i></a> -->
-		<a class="btn_lieferung slideanim2" href="#lieferzeiten" style="min-width: 30%; border-radius: 2rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">announcement</i></br>WEGEN des Corona-Virus</br>liefern wir kontaktlos!</br>Pro Shisha-Bestellung erhaltet</br>ihr einen Einweg-Schlauch.</a>
-		<a class="btn_lieferung2 slideanim2" href="#lieferzeiten" style="min-width: 30%; border-radius: 2rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">info</i></br>Aktuell liefern wir nur</br>in und um Hannover!</a>
+		<a class="btn_lieferung slideanim2" href="#lieferzeiten" style="min-width: 20%; border-radius: 2rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">announcement</i></br>WEGEN des Corona-Virus</br>liefern wir kontaktlos!</br>Pro Shisha-Bestellung erhaltet</br>ihr einen Einweg-Schlauch.</a>
+		<a class="btn_lieferung2 slideanim2" href="#lieferzeiten" style="min-width: 20%; border-radius: 2rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">info</i></br>Aktuell liefern wir nur</br>in und um Hannover!</a>
 		
-
 		<!--
 		<img class="slideanim3" src="img/shisha2.png" style="position: absolute;display: block;margin-left: auto;margin-right: auto;width: 100%;max-width: 70px;max-height: 100px;z-index: 2;top: 20%;right: 0px;left: 0px;"/>
 		<img class="slideanim2" src="img/2u.png" style="position: absolute;display: block;margin-left: auto;margin-right: auto;width: 100%;max-width: 500px;height: auto;z-index: 2;top: 20%;right: 0px;left: 0px;"/>
@@ -263,7 +262,7 @@
 									<div class="row">
 										<div class="col-sm-12" style="min-width: 100%;">
 											<button href="#0" id="classicshishainput" disabled value="" style="min-width: 100%; background: var(--hellgrau);" class="cd-add-to-cart js-cd-add-to-cart"
-												data-price="9.00" data-art="Classic-Shisha" data-anzahl="1" data-name="Classic-Shisha">In den Warenkorb</button>
+												data-price="10.00" data-art="Classic-Shisha" data-anzahl="1" data-name="Classic-Shisha">In den Warenkorb</button>
 										</div>
 									</div>
 									<!--
@@ -328,7 +327,7 @@
 						<div class="row" style="min-width: 100%;">
 							<div class="col-sm-12" style="min-width: 100%;">
 								<button href="#0" id="premiumshishainput" disabled style="min-width: 100%;  background: var(--grundfarbe);" value="" class="cd-add-to-cart js-cd-add-to-cart"
-									data-price="11.00" data-art="Premium-Shisha" data-anzahl="1" data-name="Premium-Shisha">In den Warenkorb</button>
+									data-price="13.00" data-art="Premium-Shisha" data-anzahl="1" data-name="Premium-Shisha">In den Warenkorb</button>
 							</div>
 						</div>
 						<!--
@@ -393,7 +392,7 @@
 						<div class="row">
 							<div class="col-sm-12" style="min-width: 100%;">
 								<button href="#0" id="exclusivshishainput" value="" disabled style="min-width: 100%; background: var(--secondary); color: var(--grundfarbe);" class="cd-add-to-cart js-cd-add-to-cart"
-									data-price="13.00" data-art="Exclusiv-Shisha" data-anzahl="1" data-name="Exclusiv-Shisha">In den Warenkorb</button>
+									data-price="15.00" data-art="Exclusiv-Shisha" data-anzahl="1" data-name="Exclusiv-Shisha">In den Warenkorb</button>
 							</div>
 						</div>
 						<!--
@@ -1225,7 +1224,7 @@ $(document).ready(function(){
 				
 				if (window.hasOwnProperty("positionx")) {
 					x = x + "Bitte%20an%20folgenden%20Standort%20liefern:%20https://maps.google.com/?q=" + positionx + "," + positiony;
-					x = x + "PayPal-Zahlung:%20https://www.paypal.me/shisha2you/" + gesamtpreis;
+					x = x + "%20%20%20PayPal-Zahlung:%20https://www.paypal.me/shisha2you/" + gesamtpreis;
 					warenausgang.href = x;
 					console.log("Gesamtlink " + x);
 					return true
@@ -1233,7 +1232,7 @@ $(document).ready(function(){
 
 					//navigator.geolocation.getCurrentPosition(showPosition);
 					x = x + "Bitte%20an%20folgenden%20Standort%20liefern:";
-					x = x + "PayPal-Zahlung:%20https://www.paypal.me/shisha2you/" + gesamtpreis;
+					x = x + "%20%20%20PayPal-Zahlung:%20https://www.paypal.me/shisha2you/" + gesamtpreis;
 					warenausgang.href = x;
 					return true
 					
