--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		<!-- <a class="btn_telefon slideanim2" href="tel:+51112345667" ><i class="material-icons">phone</i></a> -->
 		<!-- <a class="btn_whatsapp slideanim2" href="https://api.whatsapp.com/send?phone=491762295702" ><i class="fab fa-whatsapp"></i></a> -->
 		<a class="btn_lieferung slideanim2" href="#lieferzeiten" style="min-width: 20%; border-radius: 2rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">announcement</i></br>WEGEN des Corona-Virus</br>liefern wir kontaktlos!</br>Pro Shisha-Bestellung erhaltet</br>ihr einen Einweg-Schlauch.</a>
-		<a class="btn_lieferung2 slideanim2" href="#lieferzeiten" style="min-width: 20%; border-radius: 2rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">info</i></br>Aktuell liefern wir nur</br>in und um Hannover!</a>
+		<a class="btn_lieferung2 slideanim3" href="#lieferzeiten" style="min-width: 20%; border-radius: 1rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">info</i></br>Liefergebiet aktuell nur Hannover!</a>
 		
 		<!--
 		<img class="slideanim3" src="img/shisha2.png" style="position: absolute;display: block;margin-left: auto;margin-right: auto;width: 100%;max-width: 70px;max-height: 100px;z-index: 2;top: 20%;right: 0px;left: 0px;"/>
